--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -45,6 +45,10 @@ html {
     padding: 170px 0px;
     overflow: hidden;
   }
+  .m-section-new {
+    padding: 140px 0px;
+    overflow: hidden;
+  }
 
   .p-tablist-tab-list {
     position: relative;
