--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,7 +29,7 @@ html {
   span,
   input{
     font-family: 'Montserrat';
-    font-size: 16px;
+    /* font-size: 16px; */
   }
 
   h1{
@@ -46,7 +46,7 @@ html {
     overflow: hidden;
   }
   .m-section-new {
-    padding: 140px 0px;
+    padding: 125px 0px;
     overflow: hidden;
   }
 
